data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_2679.wast
;; 10. **Test Description**: Develop a `block` encapsulating an array of `br_table` instructions with calculated maximum allowable indices and test transitions.     - **Constraint**: Each `br_table` should correctly handle calculated upper limit indices and correctly trigger the default branches if exceeded.     - **Edge Case**: Validate robustness by reaching maximum index values ensuring the upper bounds handle defaults correctly.

(assert_invalid
  (module (func $type-br_table-edge-case
    (block (result i32)
      (i32.const 0)
      (block (result i32)
        (block (result i32) (br_table 0 1 2 (i32.const 3)))
        (i32.const 1)
      )
    )
  ))
  "type mismatch"
)